# householdXpress

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.yml
.claude/plan/: backend.md  devops.md  frontend.md
.github/workflows/: ci.yml
backend/: CLAUDE.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_notes.py
backend/app/: config.py  database.py  main.py
backend/app/notes/: model.py  router.py  schemas.py
backend/app/shared/: errors.py
backend/tests/: conftest.py  test_health.py
backend/tests/notes/: test_notes.py
frontend/: CLAUDE.md  Dockerfile  app.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: _layout.tsx  index.tsx
frontend/app/notes/: [id].tsx  index.tsx
frontend/components/ui/gluestack-ui-provider/: index.tsx
frontend/src/: index.css
frontend/src/api/: client.ts
frontend/src/components/notes/: NoteCard.tsx  NoteDetail.tsx  NoteForm.tsx
frontend/src/components/ui/: ConfirmDialog.tsx  ErrorBanner.tsx  FilterBar.tsx  LoadingSpinner.tsx
frontend/src/context/: AuthorContext.tsx
frontend/src/hooks/: useNotes.ts
frontend/src/types/: notes.ts
