[tool.poetry]
name = "householdxpress-api"
version = "0.1.0"
description = "HouseholdXpress backend API"
authors = []
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python             = "^3.12"
fastapi            = "^0.115"
uvicorn            = { extras = ["standard"], version = "^0.29" }
sqlalchemy         = "^2.0"
alembic            = "^1.13"
psycopg2-binary    = "^2.9"
pydantic-settings  = "^2.3"

[tool.poetry.group.dev.dependencies]
pytest             = "^8.2"
pytest-asyncio     = "^0.23"
httpx              = "^0.27"
ruff               = "^0.4"
mypy               = "^1.10"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
